节点分发支持extlib

--- a/modules/server/src/main/resources/templates/node/manage/editProject.html
+++ b/modules/server/src/main/resources/templates/node/manage/editProject.html
@@ -262,13 +262,12 @@
 
         form.on('select(runMode)', function (data) {
             let val = data.value;
-            if (val === "ClassPath") {
+            if (val === "ClassPath" || val === "JavaExtDirsCp") {
                 $("#mainClassDiv").show();
             } else {
                 $("#mainClassDiv").hide();
             }
             if (val === "JavaExtDirsCp") {
-                $("#mainClassDiv").show();
                 $("#javaExtDirsCp").show();
             } else {
                 $("#javaExtDirsCp").hide();
