1、增加在线编辑文件格式控制，server端配置文件中fileFormat属性

--- a/modules/server/src/main/resources/templates/node/manage/filemanage.html
+++ b/modules/server/src/main/resources/templates/node/manage/filemanage.html
@@ -24,6 +24,7 @@
             overflow-x: scroll;
             padding: 10px;
         }
+
         #yaml {
             color: white;
             background-color: black;
@@ -74,7 +75,9 @@
     {{# if(!d.isDirectory){ }}
     <a href="javascript:;" class="layui-btn layui-btn-sm layui-btn-normal" lay-event="download">下载</a>
     {{# } }}
+    {{# if(!d.isDirectory&&isAssetTypeAnImage(d.filename)){ }}
     <a href="javascript:;" class="layui-btn layui-btn-sm layui-btn" lay-event="edit">编辑</a>
+    {{# } }}
 </script>
 <script type="text/javascript">
     var zTreeObj;
@@ -104,7 +107,26 @@
         index: -1,
         isDirectory: true
     };
-
+    var fileType;
+    //加载可在线编辑文件类型
+    jQuery.ajax({
+        url: "./geFileFormat",
+        dataType: "json",
+        type: "get",
+        success: function(result) {  //这里就是我出错的地方
+            fileType=result.data.fileFormat;
+        },
+        error: function(data) {
+            alert("请求出错");
+            alert(data);
+        }
+    });
+    //判断文件格式是否允许编辑
+    function isAssetTypeAnImage(ext) {
+        var index= ext.lastIndexOf(".");
+        ext = ext.substr(index+1);
+        return fileType.indexOf(ext.toLowerCase()) !== -1;
+    }
     function loadSuccess() {
         //
         asyncLoadJs("[[${session.jpomProxyPath}]]/static/ztree/jquery.ztree.core.min.js", function () {
@@ -292,20 +314,24 @@
 
     //读取文件
     function readFile(data) {
+        var path=$("#currentPath").text();
+        if(path!=''&path!=null){
+            path+='/';
+        }
         loadingAjax({
             url: './readFile',
             data: {
                 id: '[[${id}]]',
-                filename: data.filename,
+                filename: path + data.filename,
                 levelName: data.levelName
             },
             success: function (fileData) {
-                console.log(fileData.msg);
+                //console.log(fileData.msg);
                 $("#yaml").val(fileData.msg);
                 layerOpen({
                     type: 1,
                     title: '编辑配置文件',
-                    btn: ['确认','取消'],
+                    btn: ['确认', '取消'],
                     content: $('#yaml'),
                     area: ['60%', '70%'],
                     shade: 0,
@@ -315,7 +341,7 @@
                             url: './updateConfigFile',
                             data: {
                                 id: '[[${id}]]',
-                                filename: data.filename,
+                                filename: $("#currentPath").text() + '\\' + data.filename,
                                 levelName: data.levelName,
                                 fileText: $("#yaml").val()
                             },
@@ -326,7 +352,7 @@
                                 }*/
                             }
                         });
-                    },btn2: function(){
+                    }, btn2: function () {
                         layer.close();
                     },
                     cancel: function () {
